# typed-lazyimport

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: push.yml  release.yml
lazyimport/: lazy_import.py
tests/: fixture.py  test_import.py
